--- a/crashes_scrape.ipynb
+++ b/crashes_scrape.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpCT9fRz7wTYh9STlbx6aT",
+      "authorship_tag": "ABX9TyMP6A+hPMWByo5W/rMoOZ5l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,20 +42,30 @@
     {
       "cell_type": "code",
       "source": [
+        "# Query the Cal Poly police logs site for HTML source\n",
         "response = requests.get(\"https://afd.calpoly.edu/police/campus-reports/logs\")\n",
+        "# Create HTML parser\n",
         "soup = BeautifulSoup(response.content, \"html.parser\")\n",
+        "# The data is found in an element denoted by <div class=\"row align-justify\"><\\div>\n",
+        "# Within that, it is found in a <table><\\table> element\n",
         "div = soup.find(\"div\", {\"class\": \"row align-justify\"})\n",
         "table = div.find(\"table\")\n",
         "\n",
+        "# Initialize list of data row\n",
         "rows = []\n",
+        "# Iterate through each row of the table to convert from HTML to dict\n",
+        "# Then dd to rows list\n",
         "for tr in table.find_all(\"tr\"):\n",
         "  info = tr.find_all(\"td\")\n",
         "  if len(info) >= 5:\n",
+        "    # The `Details` column has multiple parts of information\n",
+        "    # This code splits up the `Details` column into other appropriate columns\n",
         "    details = str(info[3]).replace(\"<td>\", \"\").replace(\"</strong>\", \"\").replace(\"<br/>\", \"\").replace(\"</td\", \"\").split(\"<strong>\")[1:]\n",
         "    dets = {\"Incident\": '', \"CAD #\": '', \"Report #\": ''}\n",
         "    for detail in details:\n",
         "      detail = detail.split(\": \")\n",
         "      dets[detail[0]] = detail[1]\n",
+        "    # Add info to row dictionary, then add to list\n",
         "    rows.append({\n",
         "        \"Date/Time Reported\": info[0].text,\n",
         "        \"Date/Time Occurred\": info[1].text,\n",
@@ -66,19 +76,22 @@
         "        \"Disposition\": info[4].text\n",
         "    })\n",
         "\n",
+        "# Turn rows list into tabular dataframe\n",
         "Blotter = pd.DataFrame(rows)\n",
+        "# Export to CSV file\n",
         "Blotter.to_csv(\"Blotter.csv\")\n",
+        "# Print here\n",
         "Blotter"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 658
+          "height": 423
         },
         "id": "nsNXtrrf2js1",
-        "outputId": "130120fc-cef4-4565-cbde-2eca60f42c54"
+        "outputId": "6e35e6e9-daba-4e09-fb3a-643e1cd90765"
       },
-      "execution_count": 28,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +153,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9c828f18-230d-4b86-b2a6-e54ff9cfed37\">\n",
+              "  <div id=\"df-f063d138-a497-4bfb-b27b-7c7acd3d21a8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -284,7 +297,7 @@
               "</table>\n",
               "<p>2016 rows × 7 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c828f18-230d-4b86-b2a6-e54ff9cfed37')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f063d138-a497-4bfb-b27b-7c7acd3d21a8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -335,12 +348,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9c828f18-230d-4b86-b2a6-e54ff9cfed37 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f063d138-a497-4bfb-b27b-7c7acd3d21a8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9c828f18-230d-4b86-b2a6-e54ff9cfed37');\n",
+              "          const element = document.querySelector('#df-f063d138-a497-4bfb-b27b-7c7acd3d21a8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -363,7 +376,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 4
         }
       ]
     }
