--- a/earthquakes_demo.ipynb
+++ b/earthquakes_demo.ipynb
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "P39rSeZDFoSx"
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "warnings.filterwarnings(\"ignore\")"
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,8 +583,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Wrangling"
+      ],
+      "metadata": {
+        "id": "xpeyNg1_i1vo"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,7 +1117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1146,7 +1155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1197,7 +1206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1489,14 +1498,21 @@
         "# Get frequency of appropriate quakes by date\n",
         "df_counts = df_mag5[\"date\"].value_counts().to_frame().reset_index().rename(columns={\"index\": \"date\", \"date\": \"freq\"}).sort_values(by=\"date\", ignore_index=True)\n",
         "\n",
+        "# However, the df_counts we just generated doesn't contain days with 0 quakes.\n",
+        "# We need to fix this by generating rows for dates with 0 quakes.\n",
+        "# First, let's find the start and end dates.\n",
         "start_date = df_counts['date'].min()\n",
         "end_date = df_counts['date'].max()\n",
         "\n",
+        "# Change the datatype of existing date data to string (for better merging)\n",
         "df_counts['date'] = df_counts['date'].astype(str)\n",
-        "\n",
+        "# Here we generate a dataframe with all dates\n",
         "all_dates = pd.DataFrame(pd.date_range(start_date, end_date - pd.Timedelta(days = 1), freq='d')).rename(columns={0: 'date'}).astype(str)\n",
+        "# Here we merge the df_counts with the table with all dates\n",
+        "# Then we fill in 0s for dates with no quakes\n",
         "df_counts = pd.merge(how='left', left=all_dates, right=df_counts, on='date').fillna(0)\n",
         "df_counts['freq'] = df_counts['freq'].astype(int)\n",
+        "\n",
         "df_counts"
       ],
       "metadata": {
@@ -1510,7 +1526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
