--- a/crashes_demo.ipynb
+++ b/crashes_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMh6Eqv824foBzJHkmDup76",
+      "authorship_tag": "ABX9TyMrfAgroXSjVo+HctLDqQ4C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mshsu/stat400-sets/blob/main/crashes_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mshsu/probasets/blob/main/crashes_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,9 +56,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8xy_UZOLu0lB",
-        "outputId": "5b6287bc-b206-415f-e24e-2213a2ccde45"
+        "outputId": "8b850653-2998-4f5d-8d53-4c92b4b931ef"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,18 +67,18 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting symbulate\n",
             "  Downloading symbulate-0.5.7-py3-none-any.whl (44 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/44.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.9/44.9 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.9/dist-packages (from symbulate) (1.10.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from symbulate) (1.22.4)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.9/44.9 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from symbulate) (1.22.4)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.9/dist-packages (from symbulate) (1.10.1)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.9/dist-packages (from symbulate) (3.7.1)\n",
-            "Requirement already satisfied: importlib-resources>=3.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (5.12.0)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (4.39.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (2.8.2)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (1.0.7)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (3.0.9)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (8.4.0)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (23.0)\n",
+            "Requirement already satisfied: importlib-resources>=3.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (5.12.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (0.11.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (3.0.9)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (4.39.3)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (23.0)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (8.4.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (2.8.2)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (1.4.4)\n",
             "Requirement already satisfied: zipp>=3.1.0 in /usr/local/lib/python3.9/dist-packages (from importlib-resources>=3.2.0->matplotlib->symbulate) (3.15.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.9/dist-packages (from python-dateutil>=2.7->matplotlib->symbulate) (1.16.0)\n",
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "109AsiOtuv-R"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "k6BUTd4SvZah"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_crashes = pd.read_csv(\"https://raw.githubusercontent.com/mshsu/stat400-sets/main/data/Crashes.csv\")\n",
+        "df_crashes = pd.read_csv(\"https://raw.githubusercontent.com/mshsu/probasets/main/data/Crashes.csv\")\n",
         "\n",
         "df_crashes"
       ],
@@ -135,9 +135,9 @@
           "height": 834
         },
         "id": "Zf8oNCVCvbl3",
-        "outputId": "ffc7721a-dd35-47d9-d692-a9143e72c0db"
+        "outputId": "37122f36-7a29-4086-e30f-03f93302a548"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e44af891-6af6-4146-8998-62182de566c1\">\n",
+              "  <div id=\"df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -524,7 +524,7 @@
               "</table>\n",
               "<p>10667 rows × 80 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e44af891-6af6-4146-8998-62182de566c1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -575,12 +575,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e44af891-6af6-4146-8998-62182de566c1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e44af891-6af6-4146-8998-62182de566c1');\n",
+              "          const element = document.querySelector('#df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -603,7 +603,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -660,9 +660,9 @@
           "height": 423
         },
         "id": "HX99GhPDvvNZ",
-        "outputId": "8fdb16f9-30a8-4bdc-b203-4e4e264c61e6"
+        "outputId": "61f74337-989d-4f04-8025-1d1cf5888eea"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +685,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dad154c5-62a5-4756-8f48-7d4593a69d27\">\n",
+              "  <div id=\"df-d61b7f77-02dd-4973-97ad-5d65f5f611fc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -805,7 +805,7 @@
               "</table>\n",
               "<p>277 rows × 5 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dad154c5-62a5-4756-8f48-7d4593a69d27')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d61b7f77-02dd-4973-97ad-5d65f5f611fc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -856,12 +856,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-dad154c5-62a5-4756-8f48-7d4593a69d27 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d61b7f77-02dd-4973-97ad-5d65f5f611fc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-dad154c5-62a5-4756-8f48-7d4593a69d27');\n",
+              "          const element = document.querySelector('#df-d61b7f77-02dd-4973-97ad-5d65f5f611fc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -884,7 +884,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 5
         }
       ]
     },
@@ -911,9 +911,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XHLW16fm6iPS",
-        "outputId": "3e98ff49-f96f-4ac3-e7e2-f954de55c7a1"
+        "outputId": "26a9370c-ec32-4759-bb01-1835d7a2d8ee"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,9 +959,9 @@
           "height": 578
         },
         "id": "8Qv2C5hi8AYG",
-        "outputId": "e411750f-28ee-48b1-f4ed-2700706a7d5b"
+        "outputId": "cbaa331b-2f75-4532-9ed3-b3644403d127"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1013,9 +1013,9 @@
           "height": 423
         },
         "id": "gv8J-YXe8ZoV",
-        "outputId": "7358078f-0e58-4d77-ab19-2f09b70c5da0"
+        "outputId": "f17751cc-9c75-45f8-ee89-cccc985eed03"
       },
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0c88d4d5-78ba-4fd0-9196-33976d2e07e1\">\n",
+              "  <div id=\"df-24cd955a-7f22-4400-8b66-87e035c3c8a2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1122,7 +1122,7 @@
               "</table>\n",
               "<p>3599 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c88d4d5-78ba-4fd0-9196-33976d2e07e1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-24cd955a-7f22-4400-8b66-87e035c3c8a2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1173,12 +1173,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0c88d4d5-78ba-4fd0-9196-33976d2e07e1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-24cd955a-7f22-4400-8b66-87e035c3c8a2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0c88d4d5-78ba-4fd0-9196-33976d2e07e1');\n",
+              "          const element = document.querySelector('#df-24cd955a-7f22-4400-8b66-87e035c3c8a2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1201,7 +1201,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -1234,9 +1234,9 @@
           "height": 456
         },
         "id": "FCD6zs7f9HYT",
-        "outputId": "5bd1e5e7-79e0-463b-91e9-6f124acdeade"
+        "outputId": "915fe879-9f66-409b-fbf0-f396d8b160f3"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
