--- a/crashes_demo.ipynb
+++ b/crashes_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrfAgroXSjVo+HctLDqQ4C",
+      "authorship_tag": "ABX9TyNA+D7TM0dfJnqUbB/XHg51",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8xy_UZOLu0lB",
-        "outputId": "8b850653-2998-4f5d-8d53-4c92b4b931ef"
+        "outputId": "0cd6707f-d145-4357-ddf6-7592e23003ef"
       },
       "execution_count": 1,
       "outputs": [
@@ -67,19 +67,19 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting symbulate\n",
             "  Downloading symbulate-0.5.7-py3-none-any.whl (44 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.9/44.9 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.9/44.9 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from symbulate) (1.22.4)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.9/dist-packages (from symbulate) (1.10.1)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.9/dist-packages (from symbulate) (3.7.1)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (1.0.7)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (23.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (1.4.4)\n",
             "Requirement already satisfied: importlib-resources>=3.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (5.12.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (0.11.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (3.0.9)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (4.39.3)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (23.0)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (8.4.0)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (1.4.4)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (3.0.9)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (8.4.0)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.9/dist-packages (from matplotlib->symbulate) (4.39.3)\n",
             "Requirement already satisfied: zipp>=3.1.0 in /usr/local/lib/python3.9/dist-packages (from importlib-resources>=3.2.0->matplotlib->symbulate) (3.15.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.9/dist-packages (from python-dateutil>=2.7->matplotlib->symbulate) (1.16.0)\n",
             "Installing collected packages: symbulate\n",
@@ -125,7 +125,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_crashes = pd.read_csv(\"https://raw.githubusercontent.com/mshsu/probasets/main/data/Crashes.csv\")\n",
+        "df_crashes = pd.read_csv(\"https://mshsu.github.io/probasets/data/Crashes.csv\")\n",
         "\n",
         "df_crashes"
       ],
@@ -135,9 +135,9 @@
           "height": 834
         },
         "id": "Zf8oNCVCvbl3",
-        "outputId": "37122f36-7a29-4086-e30f-03f93302a548"
+        "outputId": "17991241-10c7-4413-ca30-eee5bacda7f2"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2\">\n",
+              "  <div id=\"df-4a422787-f0f0-4c14-b9ad-c561447ab13b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -524,7 +524,7 @@
               "</table>\n",
               "<p>10667 rows × 80 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a422787-f0f0-4c14-b9ad-c561447ab13b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -575,12 +575,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4a422787-f0f0-4c14-b9ad-c561447ab13b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-550986a1-7cfd-4afd-bbdb-c2b45d9ff5d2');\n",
+              "          const element = document.querySelector('#df-4a422787-f0f0-4c14-b9ad-c561447ab13b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -603,7 +603,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -660,9 +660,9 @@
           "height": 423
         },
         "id": "HX99GhPDvvNZ",
-        "outputId": "61f74337-989d-4f04-8025-1d1cf5888eea"
+        "outputId": "9bf62f1f-29e2-428f-da5e-58b53d3d2ac6"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +685,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d61b7f77-02dd-4973-97ad-5d65f5f611fc\">\n",
+              "  <div id=\"df-dd3719a1-f8e4-40e2-8f42-05fd1cf8fe5c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -805,7 +805,7 @@
               "</table>\n",
               "<p>277 rows × 5 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d61b7f77-02dd-4973-97ad-5d65f5f611fc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd3719a1-f8e4-40e2-8f42-05fd1cf8fe5c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -856,12 +856,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d61b7f77-02dd-4973-97ad-5d65f5f611fc button.colab-df-convert');\n",
+              "          document.querySelector('#df-dd3719a1-f8e4-40e2-8f42-05fd1cf8fe5c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d61b7f77-02dd-4973-97ad-5d65f5f611fc');\n",
+              "          const element = document.querySelector('#df-dd3719a1-f8e4-40e2-8f42-05fd1cf8fe5c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -884,7 +884,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -911,9 +911,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XHLW16fm6iPS",
-        "outputId": "26a9370c-ec32-4759-bb01-1835d7a2d8ee"
+        "outputId": "26537286-c986-4edd-f022-a17d34b233f8"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,9 +959,9 @@
           "height": 578
         },
         "id": "8Qv2C5hi8AYG",
-        "outputId": "cbaa331b-2f75-4532-9ed3-b3644403d127"
+        "outputId": "cdc9f74f-85a1-4304-8f16-bd22cd49d386"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1013,9 +1013,9 @@
           "height": 423
         },
         "id": "gv8J-YXe8ZoV",
-        "outputId": "f17751cc-9c75-45f8-ee89-cccc985eed03"
+        "outputId": "f54e5fe1-c6b8-48d1-9e40-fc1485281b8b"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-24cd955a-7f22-4400-8b66-87e035c3c8a2\">\n",
+              "  <div id=\"df-c9039a1f-6128-48b4-babc-edfc46ce1014\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1122,7 +1122,7 @@
               "</table>\n",
               "<p>3599 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-24cd955a-7f22-4400-8b66-87e035c3c8a2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9039a1f-6128-48b4-babc-edfc46ce1014')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1173,12 +1173,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-24cd955a-7f22-4400-8b66-87e035c3c8a2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c9039a1f-6128-48b4-babc-edfc46ce1014 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-24cd955a-7f22-4400-8b66-87e035c3c8a2');\n",
+              "          const element = document.querySelector('#df-c9039a1f-6128-48b4-babc-edfc46ce1014');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1201,7 +1201,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -1234,9 +1234,9 @@
           "height": 456
         },
         "id": "FCD6zs7f9HYT",
-        "outputId": "915fe879-9f66-409b-fbf0-f396d8b160f3"
+        "outputId": "df68f80a-7ff6-4261-8609-78f7688c29e6"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
