--- a/bitcoin_demo.ipynb
+++ b/bitcoin_demo.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM2sFOaF7Fqp3C+RHCORUbf",
+      "authorship_tag": "ABX9TyN9Mpj9v/mrgNsAaKPcDL4t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mshsu/stat400-sets/blob/main/bitcoin_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mshsu/probasets/blob/main/bitcoin_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -59,7 +58,7 @@
       "metadata": {
         "id": "HE624Z0AyUgb"
       },
-      "execution_count": 1,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -74,7 +73,7 @@
     {
       "cell_type": "code",
       "source": [
-        "btc = pd.read_csv(\"https://raw.githubusercontent.com/mshsu/stat400-sets/main/data/Bitcoin.csv\")\n",
+        "btc = pd.read_csv(\"https://mshsu.github.io/probasets/data/Bitcoin.csv\")\n",
         "btc.head()"
       ],
       "metadata": {
@@ -83,9 +82,9 @@
           "height": 704
         },
         "id": "0yZCVFqtEYVA",
-        "outputId": "83a2ac47-dbde-4980-bf29-703aaa9ee15d"
+        "outputId": "fa03f005-0a4c-444a-8497-a26877b6ae15"
       },
-      "execution_count": 2,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +134,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-711b93ee-5952-45b7-95ec-6ca0684df8a4\">\n",
+              "  <div id=\"df-27c463de-f45d-45cf-bc97-b6713d0e6b35\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -278,7 +277,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-711b93ee-5952-45b7-95ec-6ca0684df8a4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-27c463de-f45d-45cf-bc97-b6713d0e6b35')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -329,12 +328,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-711b93ee-5952-45b7-95ec-6ca0684df8a4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-27c463de-f45d-45cf-bc97-b6713d0e6b35 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-711b93ee-5952-45b7-95ec-6ca0684df8a4');\n",
+              "          const element = document.querySelector('#df-27c463de-f45d-45cf-bc97-b6713d0e6b35');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -357,7 +356,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 36
         }
       ]
     },
@@ -374,7 +373,7 @@
       "cell_type": "code",
       "source": [
         "obs = btc['input_value'].astype(str).apply(lambda x: x[0])\n",
-        "obs = obs[obs != \"n\"].astype(int)\n",
+        "obs = obs[(obs != \"n\") & (obs != \"0\")].astype(int)\n",
         "obs = obs.value_counts(normalize=True).sort_index().to_frame().reset_index(names=\"num\").rename(columns={\"input_value\": \"observed\"})\n",
         "obs"
       ],
@@ -384,9 +383,9 @@
           "height": 331
         },
         "id": "1TsQso0VyWz0",
-        "outputId": "d51e2ba8-c6d7-4d9a-ca14-a4ca20bab960"
+        "outputId": "b62a36aa-dfbb-41e1-9c4a-47e1636603dd"
       },
-      "execution_count": 3,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +404,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-85475c6f-3ce1-49f1-8bec-4c3b33ce3626\">\n",
+              "  <div id=\"df-6af872e3-8a80-4f5b-a2f1-e035dd15328e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -478,7 +477,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-85475c6f-3ce1-49f1-8bec-4c3b33ce3626')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6af872e3-8a80-4f5b-a2f1-e035dd15328e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -529,12 +528,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-85475c6f-3ce1-49f1-8bec-4c3b33ce3626 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6af872e3-8a80-4f5b-a2f1-e035dd15328e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-85475c6f-3ce1-49f1-8bec-4c3b33ce3626');\n",
+              "          const element = document.querySelector('#df-6af872e3-8a80-4f5b-a2f1-e035dd15328e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -557,7 +556,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 37
         }
       ]
     },
@@ -584,9 +583,9 @@
           "height": 331
         },
         "id": "KjeeXENV86z5",
-        "outputId": "f5382ca6-920e-4c31-e790-e0a0b74c39eb"
+        "outputId": "d36f6169-8a2e-494e-c3bd-5e010373d649"
       },
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +604,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-03a7424c-fa56-4419-9c3e-b38fa5e3c267\">\n",
+              "  <div id=\"df-2929b010-c8c5-4426-9c86-aad3898b15b3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -678,7 +677,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-03a7424c-fa56-4419-9c3e-b38fa5e3c267')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2929b010-c8c5-4426-9c86-aad3898b15b3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -729,12 +728,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-03a7424c-fa56-4419-9c3e-b38fa5e3c267 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2929b010-c8c5-4426-9c86-aad3898b15b3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-03a7424c-fa56-4419-9c3e-b38fa5e3c267');\n",
+              "          const element = document.querySelector('#df-2929b010-c8c5-4426-9c86-aad3898b15b3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -757,7 +756,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 38
         }
       ]
     },
@@ -782,9 +781,9 @@
           "height": 461
         },
         "id": "moSyWHgcAzJg",
-        "outputId": "22214b98-d97a-4128-d392-48070151c16f"
+        "outputId": "ebe9512c-a56f-4920-9729-29d6740ca6db"
       },
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +793,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 39
         },
         {
           "output_type": "display_data",
@@ -820,7 +819,15 @@
     {
       "cell_type": "code",
       "source": [
-        "test_stat, p = stats.chisquare(both['observed'], both['benford'])\n",
+        "observed = btc['input_value'].astype(str).apply(lambda x: x[0])\n",
+        "observed = observed[observed != \"n\"].astype(int)\n",
+        "observed = observed.value_counts().sort_index()\n",
+        "observed\n",
+        "\n",
+        "benford = bfd['benford'] * sum(observed)\n",
+        "benford\n",
+        "\n",
+        "test_stat, p = stats.chisquare(observed, benford)\n",
         "print(\"Test Statistic:\", test_stat)\n",
         "print(\"p-value:\", p)"
       ],
@@ -829,16 +836,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FRuojK8BBXTr",
-        "outputId": "8a4cc2a2-b7e4-4194-f6d6-3c320fc59eb5"
+        "outputId": "1e2b3195-f823-4c7e-d6b5-49c7f23b2cab"
       },
-      "execution_count": 7,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test Statistic: 0.46105297311755356\n",
-            "p-value: 0.9999020756306287\n"
+            "Test Statistic: 460.1308671713185\n",
+            "p-value: 2.4941920126704084e-94\n"
           ]
         }
       ]
